2013-03-12  Christoph Redl <redl@kr.tuwien.ac.at>

	* include/dlvhex2/LiberalSafetyChecker.h: Implement plugin interface for
	safety checkers.
	* src/LiberalSafetyChecker.cpp: Likewise.

2012-12-15  Christoph Redl <redl@kr.tuwien.ac.at>

	* src/ExistsPlugin.cpp: Plugin for existential quantifiers in
	rule heads
	* include/dlvhex2/ExistsPlugin.h: Likewise.

2012-11-22  Christoph Redl <redl@kr.tuwien.ac.at>

	* src/ClaspSolver.cpp: Upgrade to clasp 2.1.1.
	* checkout_build_potassco.sh: Add 3 gringo patches.

2012-11-09  Christoph Redl <redl@kr.tuwien.ac.at>

	* src/AttributeGraph.cpp: First complete implementation of
	the attribute graph used for more liberal safety conditions.
	* include/dlvhex2/AttributeGraph.h: Likewise.

2012-10-17  Peter Schueller <peterschueller@sabanciuniv.edu>

	Release 2.1.0
	* NEWS: summarizing changes
	* src/Makefile.am: Increasing Version numbers.
	* configure.ac: Likewise.

2012-10-04  Christoph Redl  <redl@kr.tuwien.ac.at>

	* AggregatePlugin.cpp: Implement a simplification strategy for
	aggregates
	* AggregatePluginh: Likewise.
	* GringoGrounder.cpp: 1. Add genuine support for aggregates
	(no translation to external atoms needed).
	2. add support for #int and #maxint
	* ClaspSolver.cpp: Add support for weight rules
	(used for aggregate implementation).
	* ClaspSolver.h: Likewise.
	* Rule.h: Add support for lparse weight rules.
	* ID.h: Likewise.

2012-09-30  Christoph Redl  <redl@kr.tuwien.ac.at>

	* UnfoundedSetChecker.cpp: Enable new assumption-based UFS checker
	* UnfoundedSetChecker.h: Likewise.
	* dlvhex.cpp: Likewise.

2012-09-04  Peter Schueller  <ps@kr.tuwien.ac.at>

	* bootstrap-extra.sh: Downloading gringo and clasp tarballs to ship them with dlvhex source.
	* configure.ac: Unpacking and building gringo and clasp within dlvhex to make them easier to use.
	* build_potassco.sh: Likewise.
	* buildclaspgringo/Makefile.am: Likewise.
	* buildclaspgringo/gringo-clang.patch: Copying patch for gringo for clang from