@@ -1,0 +1,5 @@
+q(z).
+q(y).
+p(f(f(X))) :- q(X).
+r(X) :- p(X).
+r(Y) :- r(f(Y)).
