@@ -1,0 +1,1 @@
+{q(z),q(y),r(f(f(z))),r(f(f(y))),r(f(y)),r(f(z)),r(z),r(y),p(f(f(y))),p(f(f(z)))}
