@@ -177,6 +177,7 @@ public:
     };
 
   DLVHEX_DEFINE_SEMANTIC_ACTION(termFromCIdent, ID);
+  DLVHEX_DEFINE_SEMANTIC_ACTION(termFromFunctionTerm, ID);
   DLVHEX_DEFINE_SEMANTIC_ACTION(termFromInteger, ID);
   DLVHEX_DEFINE_SEMANTIC_ACTION(termFromString, ID);
   DLVHEX_DEFINE_SEMANTIC_ACTION(termFromVariable, ID);
