@@ -1,3 +1,14 @@
+2013-04-25  Christoph Redl <redl@kr.tuwien.ac.at>
+
+	* include/dlvhex2/HexGrammar.tcc: Add basic support for function
+	symbols
+	* include/dlvhex2/HexGrammar.h: Likewise
+	* include/dlvhex2/Registry.h: Likewise
+	* include/dlvhex2/Term.h: Likewise
+	* src/Registry.cpp: Likewise
+	* src/Term.cpp: Likewise
+	* src/Printer.cpp: Likewise
+
 2013-03-12  Christoph Redl <redl@kr.tuwien.ac.at>
 
 	* include/dlvhex2/LiberalSafetyChecker.h: Implement plugin interface for
